--- a/style.scss
+++ b/style.scss
@@ -28,6 +28,33 @@ body{
     &-m{
         max-width: 1600px;
         margin: $container-margin;
+        display: flex;
+        flex-wrap: wrap;
+        padding-top: 40px;
+
+        .albCont{
+            background-color: $bg-header;
+            width: calc(100% / 5);
+            padding: 15px;
+            text-align: center;
+            height: 100%;
+            overflow: hidden;
+
+            img{
+                width: 100%;
+            }
+            h2{
+                margin: 20px 0;
+                text-transform: uppercase;
+                color: white;
+                font-size: 26px;
+            }
+            p{
+                margin: 2px 0;
+                color: lightslategray;
+                font-size: 20px;
+            }
+        }
     }
 }
 
