--- a/style.css
+++ b/style.css
@@ -20,9 +20,12 @@ body {
   flex-wrap: wrap;
   padding-top: 40px;
 }
+.container-m > div {
+  margin: 10px;
+}
 .container-m .albCont {
   background-color: #2E3A46;
-  width: 20%;
+  width: calc(20% - 20px);
   padding: 15px;
   text-align: center;
   height: 100%;
